fix(ui): added overflow hidden to gear5

--- a/src/styles/gears.css
+++ b/src/styles/gears.css
@@ -38,6 +38,7 @@
   bottom: 505px;
   left: 120px;
   mix-blend-mode: soft-light;
+  overflow: hidden;
 }
 
 .move {
