--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,7 +64,7 @@ body {
   right: 0;
   bottom: -150px;
   background: radial-gradient(circle at 120% 250%, #b55a14 15%, #000000 85%);
-  z-index: -2;
+  z-index: -1;
 }
 
 .will-change-transform {
